<resources>
    <string name="app_name">Sem nome</string>

    <string name="menu_about">Sobre</string>
    <string name="menu_add">Novo item</string>
    <string name="menu_report">Relatório</string>
    <string name="menu_search">Buscar</string>

    <string name="txt_valor">R$ 0,00</string>
    <string name="txt_categoria">Catégoria</string>
    <string name="txt_data">Dia semana, dia mês</string>

    <!-- content_home.xml -->
    <string name="img_back">Voltar</string>
    <string name="img_next">Avançar</string>
    <string name="txt_date">Mês / Ano</string>

    <!-- activity_rendimento.xml -->
    <string name="btn_save">Salvar</string>
    <string name="edt_data">Data da compra</string>
    <string name="edt_valor">Valor do gasto</string>
    <string name="edt_descricao">Descrição do gasto</string>
    <string name="spn_categoria">Escolha uma catégoria</string>
</resources>
